FEAT: Update requirements pachage for YOLO and training support

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ torchvision>=0.17.0
 ultralytics>=8.2.18
 
 # Biblioteka OpenCV do operacji na obrazach i wideo
-opencv-python>=4.9.0.80
+opencv-python-headless>=4.9.0.80
 
 # Podstawowe biblioteki do analizy danych i obliczeń numerycznych
 numpy>=1.26.4
@@ -18,9 +18,6 @@ pandas>=2.2.1
 
 # Biblioteka do wizualizacji wyników
 matplotlib>=3.8.3
-
-# Notatniki Jupyter do prototypowania i analiz
-jupyter>=1.0.0
 
 # Pasek postępu używany często podczas trenowania modeli
 tqdm>=4.66.2
@@ -30,11 +27,3 @@ pyyaml>=6.0.1
 
 # Opcjonalne pakiety (odkomentuj, jeśli potrzebujesz dodatkowych narzędzi)
 # scikit-learn>=1.4.1
-
-
-# Instalacja wszystkich pakietów z pliku:
-# pip install -r requirements.txt
-
-# Użycie w Dockerfile:
-# COPY requirements.txt /app/
-# RUN pip install --no-cache-dir -r requirements.txt
